fixed bugs and allow playing only chords currently selected for guiding line

--- a/src/TODO.txt
+++ b/src/TODO.txt
@@ -4,13 +4,15 @@ A CREER:
 * thread pour midi
 * sus 2 et 4 chords
 * accordage par chanson
+* usage des notes "modern" ?
 
 A AMELIORER:
 
-* les dépendances NODE
+
 * message sur accords infaisables
 * module tools, fourre tout et voir pour la fct clone
 
 
 BUG A CORRIGER !!!!!!!!!!!!!!!!!!!!!:
  * cas du G sus 4 au lieu de G major
+ * selectedChord chaos when deleting chord in editVoicing page
