fixed scrolling diagrams

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -58,7 +58,7 @@
 "use first string" :"première corde ",
 "Select chords set:" :"Sélection d'accords: ",
 "set finger max stretch" :"écart max des doigts: ",
-"chord's number of notes" :"nombre de notes de l'acord",
+"chord's number of notes" :"nombre de notes de l'accord",
 "max number of hald-tone between notes:":"Nb. max de 1/2 tons entres les notes:",
 "Set guitar tunning" :"Accordage de la guitare",
 "String" :"Corde",
