--- a/src/TODO.txt
+++ b/src/TODO.txt
@@ -10,9 +10,9 @@ A AMELIORER:
 
 
 * message sur accords infaisables
-* module tools, fourre tout et voir pour la fct clone
+* tir des accords générés: mettre en bas ceux avec 2 muted strings in between
++ ceux qui ne sont pas des renversements sur septième, quinte ou tierce
 
 
 BUG A CORRIGER !!!!!!!!!!!!!!!!!!!!!:
- * cas du G sus 4 au lieu de G major
- * selectedChord chaos when deleting chord in editVoicing page
+ * autoriser octaves à faux déconne
