paypal sdk integration

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,5 +1,10 @@
 {
 "Please Wait ...":"Patientez ...",
+"Thanks a lot!":"Merci pour votre don !",
+"tunning list":"Accordages",
+"You can set and use your own tunning now!":"Vous avez maintenant accès aux accordages !",
+"Enter Amount":"Entrer le montant",
+"Paypal donation":"Don PayPal",
 "Instruments are loading ...":"Chargement des instruments ...",
 "Wait few seconds and try again.":"Patientez quelques secondes",	
 "Starts at:":"départ à:",
