--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -4,7 +4,8 @@
 "tunning list":"Accordages",
 "You can set and use your own tunning now!":"Vous avez maintenant accès aux accordages !",
 "Enter Amount":"Entrer le montant",
-"Paypal donation":"Don PayPal",
+"Paypal payement":"Paiement par PayPal",
+"Paid version":"Version payante",
 "Instruments are loading ...":"Chargement des instruments ...",
 "Wait few seconds and try again.":"Patientez quelques secondes",	
 "Starts at:":"départ à:",
