--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,6 +1,8 @@
 {
 "Please Wait ...":"Patientez ...",
 "Thanks a lot!":"Merci pour votre don !",
+"Sorry, available in paid version":"Réservé à la version payante",
+"Use PayPal to do so.":"Utiliser PayPal pour ce faire.",
 "tunning list":"Accordages",
 "You can set and use your own tunning now!":"Vous avez maintenant accès aux accordages !",
 "Enter Amount":"Entrer le montant",
