--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -3,9 +3,10 @@
 "You have unsaved changes !":"Changements non sauvés!",
 "Do not save":"Ne pas sauver",
 "Save ...":"Sauvegarder ...",
-"Thanks a lot!":"Merci pour votre don !",
+"Thanks a lot!!":"Merci pour votre don !",
+"You can set and use your own tunning now ...":"Vous pouvez utiliser différents accordages maintenant...",
 "Leave the app ?":"Quitter l'application ?",
-"Sorry, available in paid version":"Réservé à la version payante",
+"Sorry, only available in paid version.":"Sorry, réservé à la version payante.",
 "Use PayPal to do so.":"Utiliser PayPal pour ce faire.",
 "tunning list":"Accordages",
 "You can set and use your own tunning now!":"Vous avez maintenant accès aux accordages !",
@@ -90,10 +91,9 @@
 "Use open strings" :"cordes à vide",
 "Jazz Guitar Voicings" :"Voicings à la guitare jazz",
 "Find interesting new chord ideas on your own" :"Trouvez vous-même des suites d'accords sophistiquées.",
-"Visit the tutorial page:" :"Visiter les tutoriels:",
-"Register this app" :"Enregistrer l'application",
-"PURCHASE" :"ACHETER",
-"RESTORE" :"RESTAURER",
+"This app is designed fort advanced guitarist.":"Cette appli est destinée aux guitaristes avancés",
+"Find your own beautifull chord ideas.":"Trouvez vos propres idées d'arrangements.",
+"Visiting the tutorials pages are strongly advised:" :"Il est fortement conseillé d'aller voir démos et tutoriels:",
 "Chord has been added":"L'accord a été ajouté.",
 "Searching for guiding lines ...":"Recherche des lignes guides",
 "Some chord cannot be build with given guide.":"Certains accords ne peuvent être créés avec ce guide.",
