trad and fix warnings

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -3,9 +3,11 @@
 "You have unsaved changes !":"Changements non sauvés!",
 "Do not save":"Ne pas sauver",
 "Save ...":"Sauvegarder ...",
+"See you ...":"Quitter",
 "Thanks a lot!!":"Merci pour votre don !",
+"If you have any request:":"Pour toutes questions:",
 "You can set and use your own tunning now ...":"Vous pouvez utiliser différents accordages maintenant...",
-"Leave the app ?":"Quitter l'application ?",
+"Leave the app? No changes to save?":"Quitter l'appli? Rien à sauvegarder?",
 "Sorry, only available in paid version.":"Sorry, réservé à la version payante.",
 "Use PayPal to do so.":"Utiliser PayPal pour ce faire.",
 "tunning list":"Accordages",
@@ -113,6 +115,7 @@
 "Yes":"Oui",
 "No guiding line selected.":"Pas de ligne guide de sélectionnée.",
 "Do you want to leave the page?":"Voulez-vous quitter la page?",
+"":"",
 ", is wrong":", est en échec",
 "Error On Store Issues" :"Problème sur le Play Store", 
 "Loaded" :"Chargé",
