bug propose to save after setting new song

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -27,7 +27,7 @@
 "Add bass player":"Ajout d'une basse",	
   "Comping:":"Accompagnement",
 "arpegios":"arpègé",	
-"Voicings list": "Liste des grilles d'accords",
+"Voicings list": "Voicings",
 "New song": "Nouvelle grille",
 "Adding chords" :"Ajouter des accords",
 "Key:" :"Tonalité:",
