add new chord types

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -4,6 +4,7 @@
 "Do not save":"Ne pas sauver",
 "Save ...":"Sauvegarder ...",
 "See you ...":"Quitter",
+"Quit":"Quitter",
 "Thanks a lot!!":"Merci pour votre don !",
 "If you have any request:":"Pour toutes questions:",
 "You can set and use your own tunning now ...":"Vous pouvez utiliser différents accordages maintenant...",
