correction repositionnement sur diagramme choisi

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -79,7 +79,7 @@
 "max number of hald-tone between notes:":"Nb. max de 1/2 tons entres les notes:",
 "Set guitar tunning" :"Accordage de la guitare",
 "String" :"Corde",
-"Chords on the fret board" :"Accords sur le manche",
+"Chords list" :"liste des accords",
 "No chord found." :"Pas d'accords trouvés",
 "Guiding note" :"Note guide",
 "Set guiding line" :"Etablir la ligne guide",
