lazy loading des diagrammes

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -68,6 +68,7 @@
 "use second string:" :"seconde corde ",
 "use first string:" :"première corde ",
 "use sixth string" :"6 ème corde ",
+"Adding chords ...":"Ajout d'accords",
 "use fifth string" :"5 ème corde ",
 "use fourth string" :"4 ème corde ",
 "use third string" :"3 ème corde ",
